Update FFI to java 21 preview. Update gradle builds. Regenerate jextract header files. MemorySession -> Arena. MemoryAddress -> MemorySegment. Project name is now netchdf.