@@ -2,9 +2,6 @@ plugins {
     alias(libs.plugins.kotlin.jvm)
 }
 
-group = "org.cryptobiotic.rlauxe"
-version = libs.versions.netchdf.get()
-
 dependencies {
     implementation(libs.oshai.logging)
     implementation(libs.kotlinx.coroutines.core)
@@ -33,37 +30,3 @@ kotlin {
     jvmToolchain(21)
 }
 
-/*
-tasks {
-    val ENABLE_PREVIEW = "--enable-preview"
-    withType<JavaCompile>() {
-        options.compilerArgs.add(ENABLE_PREVIEW)
-        // Optionally we can show which preview feature we use.
-        options.compilerArgs.add("-Xlint:preview")
-        // Explicitly setting compiler option --release
-        // is needed when we wouldn't set the
-        // sourceCompatiblity and targetCompatibility
-        // properties of the Java plugin extension.
-        options.release.set(21)
-    }
-    withType<Test>().all {
-        useJUnitPlatform()
-        jvmArgs("--enable-preview")
-        minHeapSize = "512m"
-        maxHeapSize = "8g"
-        // https://www.jvt.me/posts/2021/03/11/gradle-speed-parallel/
-        // Configuration parameters to execute top-level classes in parallel but methods in same thread
-        // https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution
-        systemProperties["junit.jupiter.execution.parallel.enabled"] = "false"
-        systemProperties["junit.jupiter.execution.parallel.mode.default"] = "concurrent"
-        systemProperties["junit.jupiter.execution.parallel.mode.classes.default"] = "concurrent"
-    }
-    withType<JavaExec>().all {
-        jvmArgs("--enable-preview")
-    }
-    //withType<KotlinCompile> {
-    //    kotlinOptions.jvmTarget = "21"
-    //}
-}
-
- */
